# changdu-skills

./: .env.example  .gitignore  LICENSE  README.md
changdu/: README.md  pyproject.toml
changdu/src/changdu/: __init__.py  config.py  errors.py  utils.py
changdu/src/changdu/cli/: __init__.py  context.py  main.py
changdu/src/changdu/client/: __init__.py  ark_base.py  assets.py  polling.py  seedance.py  seedream.py  tos_upload.py
changdu/src/changdu/commands/: __init__.py  auth.py  batch.py  compat.py  image.py  task.py  trajectory.py  video.py
changdu/src/changdu/models/: requests.py  responses.py
changdu/src/changdu/trajectory/: __init__.py  schema.py  store.py
changdu/src/changdu/web/: __init__.py  app.py  jobs.py  projects.py  schemas.py
changdu/src/changdu/web/static/: index.html
changdu/tests/: test_clip_concat.py  test_seedance_status.py  test_video_request.py  test_web_studio.py
changdu/web-ui/: index.html  package.json  vite.config.ts
changdu/web-ui/src/: main.tsx  styles.css
docs/: PROJECT_OVERVIEW.md  Seedance 2.0提示词常见问题与处理指南.md  【剧本】福寿螺被拐后法遍全村.md  【剧本】给植物人老公留种后，他气醒了_episodes_all.txt  【对外】Seedance 2.0 提示词指南.md
examples/: run_30s_anime_action.sh  run_3clip_demo.sh
examples/prompts/anime_action/: 视频_Clip001.prompt.txt  视频_Clip002.prompt.txt  视频_Clip003.prompt.txt  (+3 more)
scripts/: setup-gitee.sh  setup.sh
skills/anime-action-scene/: SKILL.md
skills/asset-management/: SKILL.md
skills/character-design/: SKILL.md
skills/generate-image-by-seedream/: SKILL.md
skills/generate-video-by-seedance/: SKILL.md
skills/jimeng-skill/: SKILL.md
skills/novel-reader/: SKILL.md
skills/novel-to-video/: SKILL.md
skills/storyboard-to-seedance-prompt/: SKILL.md
skills/text-storyboard/: SKILL.md
skills/upload-to-tos/: SKILL.md
skills/video-postproduction/: SKILL.md
skills/video-review/: SKILL.md
