[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "changdu"
version = "0.1.0"
description = "CLI for Seedream and Seedance on Volcano Ark."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
  "typer>=0.12.3",
  "uvicorn>=0.30.0",
  "tos>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[project.scripts]
changdu = "changdu.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
